# tmuxp-plugin-loader

./: .gitignore  README.md  pyproject.toml
tmuxp_plugin_loader/: plugin.py
