[tool.poetry]
name = "tmuxp-plugin-loader"
version = "0.0.1"
description = "Common tmuxp session tasks"
authors = ["Aymeric Guth"]

[tool.poetry.dependencies]
python = "^3.10"
tmuxp = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
